# blob_AI

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/src/: main.rs
data/: .gitkeeper
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: lib.rs
libs/genetic_algorithm/: Cargo.toml
libs/genetic_algorithm/src/: lib.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: lib.rs
libs/neural_network/: Cargo.toml
