[package]
name = "app"
version = "0.1.0"
authors = ["wrac4242 <wrac4242@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"

genetic_algorithm = { path = "../libs/genetic_algorithm/" }
neural_network = { path = "../libs/neural_network/" }
