[package]
name = "genetic_algorithm"
version = "0.1.0"
authors = ["wrac4242 <wrac4242@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"

[dev-dependencies]
rand_chacha = "0.3"
maplit = "1.0"
approx = "0.4"
